--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.0.0",
     "ng-zorro-antd": "^7.5.0",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.3.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
